fixes in spacing

--- a/src/index.css
+++ b/src/index.css
@@ -452,8 +452,8 @@ a.linkp {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 5rem 12rem;
-    text-align: left;
+    padding: 5rem 17rem;
+    text-align: justify;
     font-family: 'Maven Pro', sans-serif;
 }
 
